--- a/app/components/addressPageComponent/EmptyPage.scss
+++ b/app/components/addressPageComponent/EmptyPage.scss
@@ -37,6 +37,7 @@
         align-items: center;
         gap: 8px;
         margin-top: 16px;
+        cursor: pointer;
         .emptyPage-addNewAddressButton-image {
             width: 24px;
             height: auto;
