--- a/app/components/NavBarV2.scss
+++ b/app/components/NavBarV2.scss
@@ -108,8 +108,9 @@ $mobileBreakpoint: 600px;
         left: 50%;
         transform: translate(-50%, -50%);
         z-index: 999;
-        background-color: white;
+        background-color: #F8F7F8;
         border-radius: 32px;
         padding: 20px;
+        
     }
 }
