update pop up window page 3

--- a/app/components/NavBarV2.scss
+++ b/app/components/NavBarV2.scss
@@ -111,6 +111,7 @@ $mobileBreakpoint: 600px;
         background-color: #F8F7F8;
         border-radius: 32px;
         padding: 20px;
-        
+        overflow-y: auto;
+        max-height: 600px;
     }
 }
