--- a/app/pages/cart/main.scss
+++ b/app/pages/cart/main.scss
@@ -5,6 +5,7 @@ $mobileBreakpoint: 600px;
     display: flex;
     flex-direction: column;
     background-color: #F8F7F8;
+    z-index: 10;
 
     @media (max-width: $mobileBreakpoint) {
         padding: 16px;
@@ -603,4 +604,30 @@ $mobileBreakpoint: 600px;
             }
         }
     }
+}
+
+.location-popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 998;
+    pointer-events: all;
+}
+
+.location-popup-window {
+    position: fixed;
+    max-width: 800px;
+    max-height: 700px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 999;
+    background-color: #F8F7F8;
+    border-radius: 32px;
+    padding: 20px;
+    overflow-y: auto;
+    max-height: 600px;
 }
