update addressPageComponent, completed address auto complete function, successfully pass new address to addressList on pop up window first page, updated address is able to show on navbar

--- a/app/components/addressPageComponent/MapPage.scss
+++ b/app/components/addressPageComponent/MapPage.scss
@@ -192,6 +192,7 @@
             gap: 8px;
             justify-content: center;
             align-items: center;
+            cursor: pointer;
             .mapPage-info-safeButton-image {
                 width: 24px;
                 height: auto;
