--- a/app/components/NavBarComponent/NavBarLocation.scss
+++ b/app/components/NavBarComponent/NavBarLocation.scss
@@ -2,6 +2,7 @@
     display: flex;
     gap: 8px;
     min-width: 100px;
+    cursor: pointer;
 
     .navbar-location-text {
         font-weight: 500;
