update register and login page to handle error, also display error message

--- a/app/components/registerPageComponent/PasswordPage.scss
+++ b/app/components/registerPageComponent/PasswordPage.scss
@@ -58,6 +58,12 @@
                 border-radius: 12px;
             }
         }
+
+        .passwordPage-errorText {
+            font-size: 14px;
+            font-weight: 600;
+            color: red;
+        }
         .passwordPage-contiuneButton {
             padding: 12px 24px;
             background-color: #B6349A;
