--- a/app/pages/login/main.css
+++ b/app/pages/login/main.css
@@ -191,3 +191,9 @@
     font-weight: 600;
     text-decoration: underline;
 }
+
+.login-errorText {
+    font-size: 12px;
+    font-weight: 600;
+    color: red;
+}
