--- a/app/pages/login/main.css
+++ b/app/pages/login/main.css
@@ -96,6 +96,8 @@
     border-color: #F0EEF0;
     border-width: 1px;
     background-color: white;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .login-contiune-button {
