--- a/app/components/dropdownItem.css
+++ b/app/components/dropdownItem.css
@@ -4,6 +4,7 @@
     gap: 8px;
     border-radius: 12px;
     align-items: center;
+    cursor: pointer;
 }
 
 .dropDown-component.dropdown-bg-white {
