--- a/app/components/settingPageComponent/SettingPageNavBar.scss
+++ b/app/components/settingPageComponent/SettingPageNavBar.scss
@@ -17,4 +17,12 @@
             font-weight: 600;
         }
     }
+
+    .settingPageNavBar-navButtons {
+
+        .settingPageNavBar-navButtons-divider {
+            border-bottom: 1px solid #F0EEF0;
+            margin: 16px 0;
+        }
+    }
 }
