--- a/app/components/NavBarComponent/NavBarLocation.scss
+++ b/app/components/NavBarComponent/NavBarLocation.scss
@@ -8,6 +8,9 @@
         font-weight: 500;
         font-size: 14px;
         color: black;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     .navbar-location-image {
