update productImageSlider mobile version side, update NavBarV2 always show on top for some page, update search result page layout

--- a/app/components/NavBarV2.scss
+++ b/app/components/NavBarV2.scss
@@ -1,6 +1,11 @@
 $mobileBreakpoint: 600px;
 
 .whole-navbar-v2 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10000;
     padding: 16px 80px;
     display: flex;
     flex-direction: column;
