update NavBar logo size, set logic for mobile version address page

--- a/app/components/NavBarV2.scss
+++ b/app/components/NavBarV2.scss
@@ -50,6 +50,11 @@ $mobileBreakpoint: 600px;
             min-width: 115px;
             height: auto;
             margin-right: 20px;
+
+            @media (max-width: $mobileBreakpoint) {
+                margin-right: 10px;
+                width: auto;
+            }
         }
         .top-navbar-spacer {
             min-width: 0px;
