--- a/app/components/settingPageComponent/SettingProfilePage.scss
+++ b/app/components/settingPageComponent/SettingProfilePage.scss
@@ -34,6 +34,7 @@
             display: flex;
             align-items: center;
             gap: 8px;
+            cursor: pointer;
 
             .settingProfilePage-nameBox-editButton-text {
                 font-size: 14px;
