--- a/app/pages/setting/main.scss
+++ b/app/pages/setting/main.scss
@@ -21,4 +21,14 @@ $mobileBreakpoint: 600px;
             flex-grow: 1;
         }
     }
+
+    .overlay-background {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 9998;
+    }
 }
